main.css
.container {
    background-color: darkblue;
    padding-top: 10px;
}

.navbar {
    margin-left: 25px;
    margin-right: 25px;
    padding-top: 10px;
    padding-left: 10px;
    padding-bottom: 10px;
    box-shadow: 0 0 20px 2px whitesmoke;
    border-radius: 10px;
    background-color: whitesmoke;
}

.btn {
    background-color: darkblue;
    border-color: darkblue;
    color: springgreen;
    padding-left: 10px;
    padding-right: 10px;
}

.h1 { 
    color: black;
    font-size: 2em;
    font-family: serif;
    margin: 0%;
}

.h2 {
    color: black;   
    font-size: 1.5em;
    margin-top: 0.83em;
    margin-bottom: 0.83em;
    font-weight: bold;
}

.h3 {
    color: black;
    font-size: 1.17em;
    margin-top: 1em;
    margin-bottom: 1em;
    font-family: serif;
    font-weight: bold;
}

.text {
    color: black;
    text-indent: 15px;
    padding-bottom: 10px;
}

.content-main {
    background-color: whitesmoke;
    margin-top: 10px;
    margin-bottom: 0px;
    margin-left: 25px;
    margin-right: 25px;
    padding-bottom: 100%;
    box-shadow: 0 0 20px 2px whitesmoke;
    border-radius: 10px;
}

.content {
    padding: 10px;
}

li {
    color: black;
}

.img-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.img {
    padding: 2px;
}

